Update ClamAV version

--- a/charts/clamav/Chart.yaml
+++ b/charts/clamav/Chart.yaml
@@ -2,8 +2,8 @@ apiVersion: v2
 name: clamav
 description: Chart for deploying a ClamavD on kubernetes as statfulSet
 type: application
-version: 0.1.1
-appVersion: 0.104.0
+version: "0.2.0"
+appVersion: "1.1.0"
 home: https://kubezero.com
 icon: https://cdn.zero-downtime.net/assets/kubezero/logo-small-64.png
 keywords:
@@ -13,6 +13,6 @@ maintainers:
   - name: Quarky9
 dependencies:
   - name: kubezero-lib
-    version: ">= 0.1.4"
+    version: ">= 0.1.6"
     repository: https://cdn.zero-downtime.net/charts/
-kubeVersion: ">= 1.18.0"
+kubeVersion: ">= 1.25.0"
