--- a/charts/clamav/values.yaml
+++ b/charts/clamav/values.yaml
@@ -16,7 +16,7 @@ clamav:
   # clamav.image -- The clamav docker image
   image: clamav/clamav
   # clamav.version -- The clamav docker image version - defaults to .Chart.appVersion
-  version: "unstable"
+  # version: "unstable"
 
   replicaCount: 1
 
@@ -40,7 +40,7 @@ clamav:
     # clamav.resources -- The resource requests and limits for the clamav service
     requests:
       cpu: 300m
-      memory: 1300M
+      memory: 2000M
     #limits:
-    #  cpu: 1500m
-    #  memory: 2000M
+    #  cpu: 2
+    #  memory: 4000M
