--- a/renovate.json
+++ b/renovate.json
@@ -5,5 +5,13 @@
     ":label(renovate)",
     ":semanticCommits"
   ],
-  "prHourlyLimit": 0
+  "prHourlyLimit": 0,
+  "packageRules": [
+    {
+      "matchManagers": ["helmv3"],
+      "additionalBranchPrefix": "{{parentDir}}-",
+      "matchFileNames": ["charts/*/Chart.yaml"],
+      "groupName": "{{parentDir}}-dependencies"
+    }
+  ]
 }
