Renovate ignore subcharts

--- a/renovate.json
+++ b/renovate.json
@@ -13,5 +13,6 @@
       "matchFileNames": ["charts/*/Chart.yaml"],
       "groupName": "{{parentDir}}-dependencies"
     }
-  ]
+  ],
+  "ignorePaths": ["charts/*/charts/**"]
 }
