--- a/renovate.json
+++ b/renovate.json
@@ -6,6 +6,7 @@
     ":semanticCommits"
   ],
   "prHourlyLimit": 0,
+  "prConcurrentLimit": 0,
   "packageRules": [
     {
       "matchManagers": ["helmv3"],
