Prepare storage module for renovate, use new update-lib

--- a/charts/kubezero-storage/Chart.yaml
+++ b/charts/kubezero-storage/Chart.yaml
@@ -22,19 +22,19 @@ dependencies:
   - name: lvm-localpv
     version: 1.0.1
     condition: lvm-localpv.enabled
-    # we patch: repository: https://openebs.github.io/lvm-localpv
+    repository: https://openebs.github.io/lvm-localpv
   - name: aws-ebs-csi-driver
     version: 2.18.0
     condition: aws-ebs-csi-driver.enabled
-    # repository: https://kubernetes-sigs.github.io/aws-ebs-csi-driver
+    repository: https://kubernetes-sigs.github.io/aws-ebs-csi-driver
   - name: aws-efs-csi-driver
     version: 2.4.1
     condition: aws-efs-csi-driver.enabled
-    # repository: https://kubernetes-sigs.github.io/aws-ebs-csi-driver
+    repository: https://kubernetes-sigs.github.io/aws-efs-csi-driver
   - name: gemini
     version: 2.0.0
     condition: gemini.enabled
-    # repository: https://charts.fairwinds.com/stable
+    repository: https://charts.fairwinds.com/stable
   - name: k8up
     version: 4.2.0
     condition: k8up.enabled
